--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Say Hello
         run: echo "Hello, CI/CD!"
+      - name: Run simple test
+        run: |
+          echo "1 + 1 = $((1 + 1))"
+          if [ $((1 + 1)) -ne 2 ]; then
+            exit 1
+          fi
+
