--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,8 @@ jobs:
 
       - name: Run tests
         run: npm test
+      - name: Upload HTML test report
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-test-report
+          path: reports/html/report.html
